--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,14 @@
 
 # misc
 .DS_Store
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 .env.development
-
-.env.development
+.env.example
 
 npm-debug.log*
 yarn-debug.log*
